# houself

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README.md  TODO  autogen.sh  config.h.cmake  configure.ac
cmake/modules/: FindCURLpp.cmake
doc/hardware/datasheet/: usb_serial_f.txt
doc/hardware/schematics/: esp8266.dia
doc/hardware/schematics/alim/: alim.fzz
doc/hardware/schematics/atmega/: atmega.fzz  atmega_bb.fzz
doc/hardware/schematics/board_temp/: temp.fzz
doc/hardware/schematics/dht11/: dht11.dia
doc/hardware/schematics/isp/: isp.fzz
doc/libtchat/: protocol.txt
doc/soft/api/: Doxyfile
doc/soft/libtchat/: protocol.txt
etc/: CMakeLists.txt  monitor_screenrc
examples/: CMakeLists.txt
examples/arduino/: CMakeLists.txt
examples/arduino/serial/mock/: CMakeLists.txt
examples/arduino/tchat/: CMakeLists.txt
examples/arduino/temp_hum_server/: CMakeLists.txt  server.cpp
examples/arduino/temp_hum_server/mock/: CMakeLists.txt  main.cpp
examples/arduino/wifi/: wifi.cpp
examples/board/blink/: blink.c
examples/board/serial/: CMakeLists.txt  serial.h
examples/board/serial/mock/: mock_serial.cpp
examples/board/temp_hum_server/: CMakeLists.txt  server.cpp  server.hpp
examples/board/temp_hum_server/mock/: CMakeLists.txt
examples/board/wifi/: CMakeLists.txt
examples/os/: CMakeLists.txt
examples/os/fake_sensors/: main.cpp
include/: CMakeLists.txt
include/dominus/board/core/: DmnBrick.hpp  DmnCore.hpp  DmnLogger.hpp  DmnSerial.hpp  DmnWifi.hpp
include/dominus/board/dev/esp8266/: DmnESP8266.hpp
src/: CMakeLists.txt  Makefile.am
src/lib/: CMakeLists.txt  Makefile.am
src/lib/arduino/: CMakeLists.txt  Makefile.am
src/lib/arduino/core/: CMakeLists.txt  DmnLogger.cpp  DmnLogger.hpp  Makefile.am
src/lib/arduino/dev/esp8266/: DmnESP8266.cpp
src/lib/arduino/libcore/: CMakeLists.txt
src/lib/arduino/libdht11/: CMakeLists.txt  DHT11.cpp  DHT11.hpp  LibDHT11.cpp  LibDHT11.hpp
src/lib/arduino/libesp8266/: ESP8266.cpp  ESP8266.hpp  LibESP8266.cpp  LibESP8266.hpp  Message.hpp
src/lib/board/core/: DmnBrick.cpp  DmnSerial.cpp  DmnWifi.cpp
src/lib/board/dev/: CMakeLists.txt
src/lib/board/dev/esp8266/: CMakeLists.txt  DmnESP8266.cpp  DmnESP8266Message.hpp
src/lib/board/libdht11/: DHT11.hpp
src/lib/board/libesp8266/: ESP8266.hpp
src/lib/common/: CMakeLists.txt  Makefile.am
src/lib/common/libtchat/: CMakeLists.txt  Makefile.am  TchatBuffer.cpp  TchatBuffer.hpp  TchatCommon.hpp  TchatMsg.hpp  TchatMsgLed.cpp  TchatMsgLed.hpp  TchatMsgServo.cpp  TchatMsgServo.hpp  TchatMsgTempHum.cpp  TchatMsgTempHum.hpp  TchatMsgTemperature.cpp  TchatMsgTemperature.hpp
src/lib/libtchat/: Makefile.am  TchatBuffer.cpp  TchatBuffer.hpp  TchatCommon.hpp  TchatMsg.cpp  TchatMsg.hpp  TchatMsgLed.hpp
src/lib/os/: CMakeLists.txt  Makefile.am
src/lib/os/libreactor/: CMakeLists.txt  Makefile.am  Reactor.cpp  Reactor.hpp  ReactorCallback.cpp  ReactorCallback.hpp
src/lib/os/libserial/: CMakeLists.txt  Makefile.am  SerialPort.cpp  SerialPort.hpp
src/tools/: CMakeLists.txt
src/tools/arduino/: CMakeLists.txt  Makefile.am
src/tools/arduino/blink/: CMakeLists.txt  Makefile.am
src/tools/arduino/tchat/: CMakeLists.txt  Makefile.am  tchat.cpp
src/tools/arduino/upload/: dominus_arduino_upload  upload.sh
src/tools/arduino/wifi/: CMakeLists.txt  wifi.cpp
src/tools/os/: CMakeLists.txt  Makefile.am
src/tools/os/fake_sensors/: .CMakeLists.txt.swp  CMakeLists.txt  a.out
src/tools/os/monitor/: ArduinoCallback.cpp  ArduinoCallback.hpp  CMakeLists.txt  Makefile.am  dominus_monitor  main.cpp  monitor.sh  screenrc
src/tools/os/monitor/monitor_ack/: ArduinoCallback.cpp  ArduinoCallback.hpp  CMakeLists.txt  Makefile.am  main.cpp
src/tools/os/monitor/monitor_cmd/: CMakeLists.txt  Makefile.am  Terminal.cpp  main.cpp
tests/: CMakeLists.txt
tests/arduino/: CMakeLists.txt
tests/arduino/mock/: Arduino.cpp  Arduino.h  CMakeLists.txt  WString.cpp
tests/arduino/mock/SoftwareSerial/: SoftwareSerial.cpp  SoftwareSerial.h
tests/arduino/serial/: CMakeLists.txt  serial.cpp
tests/arduino/serial/mock/: CMakeLists.txt
tests/arduino/tchat/: tchat.cpp
tests/arduino/temp_hum_server/: CMakeLists.txt
tests/arduino/wifi/: CMakeLists.txt  wifi.cpp
tools/arduino/: CMakeLists.txt
tools/arduino/upload/: CMakeLists.txt
tools/arduino/upload_as_isp/: CMakeLists.txt  dominus_arduino_upload_as_isp
tools/os/: CMakeLists.txt
tools/os/monitor/: dominus_monitor
tools/os/monitor/monitor_ack/: ArduinoCallback.hpp  CMakeLists.txt
tools/os/monitor/monitor_cmd/: Terminal.hpp  main.cpp
utils/: curlpp.sh
